# mujoco

./: .gitattributes  .gitignore  HANDOFF.md  MUJOCO_LOG.TXT  NOTICE  README.md  TRYME.md  pyproject.toml
apps/studio/: CMakeLists.txt  main.cc
apps/studio/editor/: asset_import.cc  authoring_ops.cc  authoring_ops.h  details_panel.cc  details_panel.h  editor_context.h  editor_ops.cc  editor_ops.h  element_access.h  gizmo.cc  gizmo.h  gizmo_math.cc  hierarchy_icons.h  hierarchy_model.cc  hierarchy_panel.cc  hierarchy_panel.h  joint_overlay.cc  joint_overlay.h  layers.cc  layers.h  mode_ui.h  panels.cc  pick_logger.cc  placement.cc  placement.h  plugin_abi.h  plugins.h  protospec_editor.cc  transform_math.cc  transform_math.h  undo.h  viewport_plugin.cc
apps/studio/host/: app.cc  app.h
apps/studio/platform/hal/: renderer.cc  window.cc
apps/studio/platform/ux/: interaction.cc  interaction.h  plugin.h  ps_plugin_ext.cc  ps_plugin_ext.h  registry.inc.h
apps/studio/test/: test_details.cc  test_gizmo.cc  test_host.cc  test_hostui.cc  test_se5_assets.cc  test_studio.cc
cpp/: CMakeLists.txt
cpp/bridge/: binding.cc  binding.h  compile.cc  compile.h  pose.cc  pose.h  report.h
cpp/build_wave3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  protospec.sln  protospec.vcxproj  protospec.vcxproj.filters  protospec_bridge.vcxproj  protospec_bridge.vcxproj.filters  protospec_bridge_tests.vcxproj  protospec_bridge_tests.vcxproj.filters  protospec_compile.vcxproj  protospec_compile.vcxproj.filters  protospec_compile_tests.vcxproj  protospec_compile_tests.vcxproj.filters  protospec_core.vcxproj  protospec_core.vcxproj.filters  protospec_io.vcxproj  protospec_io.vcxproj.filters  protospec_io_tests.vcxproj  protospec_io_tests.vcxproj.filters  protospec_lifted.vcxproj  protospec_lifted.vcxproj.filters  protospec_sdk_tests.vcxproj  protospec_sdk_tests.vcxproj.filters  protospec_tests.vcxproj  protospec_tests.vcxproj.filters  protospec_validate.vcxproj  protospec_validate.vcxproj.filters  protospec_validate_tests.vcxproj  protospec_validate_tests.vcxproj.filters  ps_compile.vcxproj  ps_compile.vcxproj.filters  ps_native_diff.vcxproj  ps_native_diff.vcxproj.filters  (+6 more)
cpp/build_wave3/Release/: protospec_core.lib  protospec_lifted.lib  tinyxml2.lib
cpp/build_wave3/Testing/Temporary/: CTestCostData.txt
cpp/build_wave3/harness/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  mj_model_diff.vcxproj  mj_model_diff.vcxproj.filters  model_diff_lib.vcxproj  model_diff_lib.vcxproj.filters  plugin_registry.vcxproj  plugin_registry.vcxproj.filters
cpp/build_wave3/harness/Release/: model_diff_lib.lib  plugin_registry.lib
cpp/compile/: build.cc  build.h  context.h  native.cc  native.h  native_supported.h
cpp/compile/lifted/: builtin_mesh.cc  make_model.cc  make_model.h  marching_cube.cc  marching_cube.h  mesh_pipeline.cc  mesh_pipeline.h  mjuu_util.cc
cpp/core/: resolve.cc
cpp/harness/: CMakeLists.txt  mj_model_diff.cc  plugin_registry.cc  plugin_registry.h  ps_native_diff.cc
cpp/include/protospec/: compile.h  core.h  io.h  validate.h
cpp/io/: defaults.cc  defaults.h  include.cc  include.h  mjcf.h  mjcf_reader.cc  mjcf_writer.cc  numeric.cc  numeric.h  supported.json
cpp/python/: CMakeLists.txt  module.cc
cpp/sdk/: save.cc
cpp/sdk/protospec/: attach.h  builders.h  classes.h  detail.h  refs.h  save.h  traversal.h
cpp/test/: test_bridge.cc  test_io.cc  test_model.cc  test_native.cc  test_public_api.cc  test_sdk.cc  test_validate.cc
cpp/tools/: ps_compile.cc  ps_validate.cc
cpp/validate/: validate.cc  validate.h
protospec/: .gitattributes  .gitignore  README.md  pyproject.toml
protospec/lib/: CMakeLists.txt
protospec/lib/compile/: bridge.h  compile.cc  compile.h  mjs_builder.cc  mjs_builder.h  mjs_convert.h  pose.cc  report.h
protospec/lib/core/: resolve.cc  resolve.h
protospec/lib/harness/: CMakeLists.txt  mj_model_diff.cc  model_diff_lib.cc  model_diff_lib.h  plugin_registry.cc  ps_path_diff.cc
protospec/lib/include/protospec/: compile.h  io.h  (+6 more)
protospec/lib/io/: defaults.cc  defaults.h  include.cc  include.h  mjcf.h  mjcf_reader.cc  mjcf_writer.cc  numeric.cc  supported.json
protospec/lib/python/: CMakeLists.txt  module.cc  ps_bind.h
protospec/lib/sdk/: save.cc
protospec/lib/test/: test_bridge.cc  test_io.cc  test_model.cc  test_public_api.cc  test_sdk.cc  test_validate.cc
protospec/lib/tools/: ps_compile.cc  ps_roundtrip.cc
protospec/lib/validate/: sizes.cc  sizes.h  validate.cc
protospec/protospec_gen/: binding.py  emit.py  emit_mjs.py  emit_native.py  emit_py.py  idl.py
protospec/schema/: mujoco.bind  mujoco.spec
protospec/snapshots/: corpus_report.json  mjcf_schema.json  mjmodel_enums.json  mjspec_fields.json  mjt_enums.json  spec_defaults.json
protospec/tests/: _mujoco_src.py  test_asan.py  test_binding.py  test_boundaries.py  test_bridge_corpus.py  test_corpus_coverage.py  test_differential.py  test_editor_ux_windowless.py  test_emit.py  test_extract_mjcf_schema.py  test_extract_mjspec_fields.py  test_extract_spec_defaults.py  test_handtable_keys.py  test_idl.py  test_layered_save_windowless.py  test_mjs_binding.py  test_native_attrbind.py  test_native_keyword_join.py  test_native_keyword_maps.py  test_native_schema_table.py  test_path_diff.py  test_plugin_windowless.py  test_python_bindings.py  test_rigger_windowless.py  test_schema_coverage.py  test_schema_parses.py  test_studio_smoke.py  test_validate_corpus.py
protospec/tests/fixtures/: annotations.spec  arity.spec  cardinality.spec  section5.spec  section5_expected.json  unions.spec
protospec/tools/: corpus_study.py  run_asan.ps1  run_asan.sh  write_binding_annotations.py
protospec/tools/bootstrap/: extract_c_enums.py  extract_mjcf_schema.py  extract_mjmodel_enums.py  extract_mjspec_fields.py  extract_spec_defaults.py  legacy_binding_tables.json
studio/glue/: CMakeLists.txt  register_editor.cc
(+568 files in other folders)
