[project]
name = "protospec"
version = "0.0.1"
description = "IDL-driven object model generator for MuJoCo models"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pybind11>=3.0.4",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["protospec_gen"]
